removed top10 option for p-values fgsea implemented

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -137,5 +137,11 @@
     <Setting Name="useRegulons" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="vcPlot" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="gseaFC" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
