--- a/app.config
+++ b/app.config
@@ -133,6 +133,12 @@
             <setting name="useRegulons" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="vcPlot" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="gseaFC" serializeAs="String">
+                <value>True</value>
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
