--- a/GINtool.csproj
+++ b/GINtool.csproj
@@ -33,10 +33,10 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <PublishUrl>D:\Source\Repos\publish\</PublishUrl>
+    <PublishUrl>C:\Users\fkloet\source\repos\franskloet\publish\</PublishUrl>
     <InstallUrl />
     <TargetCulture>en</TargetCulture>
-    <ApplicationVersion>1.0.1.1</ApplicationVersion>
+    <ApplicationVersion>1.0.1.7</ApplicationVersion>
     <AutoIncrementApplicationRevision>false</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>7</UpdateInterval>
@@ -295,6 +295,7 @@
     <None Include="GINtool_1_TemporaryKey.pfx" />
     <None Include="GINtool_2_TemporaryKey.pfx" />
     <None Include="GINtool_3_TemporaryKey.pfx" />
+    <None Include="GINtool_4_TemporaryKey.pfx" />
     <None Include="GINtool_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -400,10 +401,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>GINtool_1_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>GINtool_4_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>CF7170495EAC9DA8F5533CD114BF4EE1B8FEF162</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>8A959424F9948BAE6A1B8A4A1323F2138ABAF4A4</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>DNA_icon-icons.com_75035.ico</ApplicationIcon>
